Add 'Past Members' link to navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,6 +131,7 @@
                     <li><a href="{{ '/people' | relative_url }}">People</a></li>
                     <li><a href="{{ '/publications' | relative_url }}">Publications</a></li>
                     <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
+                    <li><a href="{{ '/past-members' | relative_url }}">Past Members</a></li>
                 </ul>
             </nav>
         </div>
